--- a/Makefile.project
+++ b/Makefile.project
@@ -15,11 +15,13 @@ SOURCE_DIRS = AppFull/src \
 			  LibModbus/src \
 			  PluginModbus/src \
 			  PluginModbusUI/src \
+			  QML/CuteHMI/Modbus/src \
 			  LibStupid/src \
 			  PluginStupid/src \
 			  PluginStupidUI/src \
-			  QML/CuteHMI/Modbus/src \
-			  QML/CuteHMI/Stupid/src
+			  QML/CuteHMI/Stupid/src \
+			  LibCharts/src \
+			  QML/CuteHMI/Charts/src \
 
 INCLUDE_DIRS = AppFull/src \
 			   AppLite/src \
@@ -28,15 +30,18 @@ INCLUDE_DIRS = AppFull/src \
 			   LibModbus/src \
 			   PluginModbus/src \
 			   PluginModbusUI/src \
+			   QML/CuteHMI/Modbus/src \
 			   LibStupid/src \
 			   PluginStupid/src \
 			   PluginStupidUI/src \
 			   QML/CuteHMI/Modbus/src \
-			   QML/CuteHMI/Stupid/src
+			   LibCharts/src \
+			   QML/CuteHMI/Charts/src
 
 QML_DIRS = QML/CuteHMI/Base \
 		   QML/CuteHMI/Modbus \
-		   QML/CuteHMI/Stupid
+		   QML/CuteHMI/Stupid \
+		   QML/CuteHMI/Charts
 
 DOC_QDOC_FILES = QML/CuteHMI/Modbus/Modbus.qdocconf \
 				 QML/CuteHMI/Base/Base.qdocconf
