--- a/Makefile.project
+++ b/Makefile.project
@@ -8,41 +8,44 @@ LIC_HASH = LICENSE.MP.hash.inc
 
 INCLUDE_GUARD_PREFIX = "CUTEHMI_"
 
-SOURCE_DIRS = AppFull/src \
-			  AppLite/src \
+SOURCE_DIRS = AppLite/src \
 			  LibBase/src \
-			  LibWidgets/src \
-			  LibModbus/src \
-			  PluginModbus/src \
-			  PluginModbusUI/src \
-			  QML/CuteHMI/Modbus/src \
-			  LibStupid/src \
-			  PluginStupid/src \
-			  PluginStupidUI/src \
-			  QML/CuteHMI/Stupid/src \
 			  LibCharts/src \
+			  LibModbus/src \
+			  LibServices/src \
+			  LibStupid/src \
+			  PluginApp/src \
+			  PluginModbus/src \
+			  PluginServices/src \
+			  PluginStupid/src \
+			  QML/CuteHMI/Base/src \
 			  QML/CuteHMI/Charts/src \
+			  QML/CuteHMI/Modbus/src \
+			  QML/CuteHMI/Services/src \
+			  QML/CuteHMI/Stupid/src
 
-INCLUDE_DIRS = AppFull/src \
-			   AppLite/src \
-			   LibUtils/src \
-			   LibBase/src \
-			   LibWidgets/src \
-			   LibModbus/src \
+INCLUDE_DIRS = AppLite/src \
+			   LibBase/include \
+			   LibCharts/include \
+			   LibModbus/include \
+               LibServices/include \
+			   LibStupid/include \
+			   LibUtils/include \
+			   PluginApp/src \
 			   PluginModbus/src \
-			   PluginModbusUI/src \
-			   QML/CuteHMI/Modbus/src \
-			   LibStupid/src \
+               PluginServices/src \
 			   PluginStupid/src \
-			   PluginStupidUI/src \
+			   QML/CuteHMI/Base/src \
+			   QML/CuteHMI/Charts/src \
 			   QML/CuteHMI/Modbus/src \
-			   LibCharts/src \
-			   QML/CuteHMI/Charts/src
+			   QML/CuteHMI/Services/src \
+			   QML/CuteHMI/Stupid/src 
 
 QML_DIRS = QML/CuteHMI/Base \
+		   QML/CuteHMI/Charts \
 		   QML/CuteHMI/Modbus \
-		   QML/CuteHMI/Stupid \
-		   QML/CuteHMI/Charts
+		   QML/CuteHMI/Services \
+		   QML/CuteHMI/Stupid
 
 DOC_QDOC_FILES = QML/CuteHMI/Modbus/Modbus.qdocconf \
 				 QML/CuteHMI/Base/Base.qdocconf
@@ -51,6 +54,8 @@ DOC_DOXYGEN_FILES = LibBase/Doxyfile
 
 QMLTYPES_EXTRAPATH = $$(PWD)/../bin:$$(PWD)/../lib
 
-QMLTYPES_DUMPS = "CuteHMI.Modbus 1.0 QML > QML/CuteHMI/Modbus/plugins.qmltypes; \
-				 CuteHMI.Base 1.0 QML > QML/CuteHMI/Base/plugins.qmltypes; \
-				 CuteHMI.Stupid 1.0 QML > QML/CuteHMI/Stupid/plugins.qmltypes " 
+QMLTYPES_DUMPS = "CuteHMI.Base 1.0 QML > QML/CuteHMI/Base/plugins.qmltypes; \
+				 CuteHMI.Charts 1.0 QML > QML/CuteHMI/Charts/plugins.qmltypes; \
+				 CuteHMI.Modbus 1.0 QML > QML/CuteHMI/Modbus/plugins.qmltypes; \
+				 CuteHMI.Services 1.0 QML > QML/CuteHMI/Services/plugins.qmltypes; \
+				 CuteHMI.Stupid 1.0 QML > QML/CuteHMI/Stupid/plugins.qmltypes"
