--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,12 @@ before_install:
 install:
   - sudo apt-get -y install qt58[QTPACKAGE]
   - sudo apt-get -y install qt58serialbus
-  - sudo apt-get -y install libmodbus-dev
+  - sudo git clone git://github.com/stephane/libmodbus.git
+  - cd libmodbus
+  - sudo git checkout f9358460ee1f62bcac716ad0444b3bbe7628b204
+  - sudo ./autogen.sh
+  - sudo ./configure && sudo make install
+  - cd ..
 
 script:
   - source /opt/qt58/bin/qt58-env.sh
