--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,12 @@ install:
   - sudo ./configure && sudo make install
   - cd ..
 
+env:
+  - QMAKE_OPTIONS="CONFIG+=debug CONFIG+=qml_debug"
+  - QMAKE_OPTIONS=
+
 script:
   - source /opt/qt58/bin/qt58-env.sh
   - mkdir build && cd build
-  - /opt/qt58/bin/qmake ../All.pro
-  - make all
+  - /opt/qt58/bin/qmake ../All.pro $QMAKE_OPTIONS
+  - make
