--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ compiler:
   - gcc
 
 env:
-  - QMAKE_OPTIONS="CONFIG+=debug CONFIG+=qml_debug"
-  - QMAKE_OPTIONS="CONFIG+=release"
+  - QMAKE_ENV="CONFIG+=debug CONFIG+=qml_debug"
+  - QMAKE_ENV="CONFIG+=release"
 
 before_install:
   - sudo add-apt-repository --yes ppa:beineri/opt-qt58-trusty
@@ -28,5 +28,5 @@ install:
 script:
   - source /opt/qt58/bin/qt58-env.sh
   - mkdir build && cd build
-  - /opt/qt58/bin/qmake ../All.pro $QMAKE_OPTIONS
+  - /opt/qt58/bin/qmake ../All.pro $QMAKE_ENV QMAKE_CC=$CC QMAKE_CXX=$CXX
   - make
