--- a/Makefile.project
+++ b/Makefile.project
@@ -6,7 +6,7 @@ LIC_DSLASH = LICENSE.MP.dslash.inc
 
 LIC_HASH = LICENSE.MP.hash.inc
 
-INCLUDE_GUARD_PREFIX = "CUTEHMI_"
+INCLUDE_GUARD_PREFIX = ""
 
 SOURCE_DIRS = tools/cutehmi_cutehmi_1/src \
 			  modules/cutehmi_1/src \
