--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ compiler:
   - gcc
 
 env:
-  - QMAKE_ENV="CONFIG+=debug CONFIG+=qml_debug"
-  - QMAKE_ENV="CONFIG+=release"
+  - QBS_ENV="release"
+  - QBS_ENV="debug"
 
 before_install:
   - sudo add-apt-repository --yes ppa:beineri/opt-qt594-trusty
@@ -25,9 +25,10 @@ install:
   - ./configure
   - make && sudo make install
   - cd ..
+  - source /opt/qt59/bin/qt59-env.sh
+  - qbs setup-toolchains --detect
+  - qbs setup-qt /opt/qt59/bin/qmake qt59
+  - qbs config profiles.qt59.baseProfile $CC
 
 script:
-  - source /opt/qt59/bin/qt59-env.sh
-  - mkdir build && cd build
-  - /opt/qt59/bin/qmake ../All.pro $QMAKE_ENV QMAKE_CC=$CC QMAKE_CXX=$CXX
-  - make
+  - qbs build -f CuteHMI.qbs -d build --command-echo-mode command-line profile:qt59 $QBS_ENV
