--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "doc/Doxygen"]
 	path = doc/Doxygen
-	url = git@github.com:michpolicht/CuteHMI_Doxygen.git
+	url = https://github.com/michpolicht/CuteHMI_Doxygen.git
