--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ before_install:
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get -y install qt59[QTPACKAGE]
+  - sudo apt-get -y install qt59-meta-minimal
+  - sudo apt-get -y install qt59qbs
   - sudo apt-get -y install qt59serialbus
   - sudo apt-get -y install libssh-dev
   - git clone git://github.com/stephane/libmodbus.git
