Add 'libmodbus' recipe.

--- a/external/recipes/i686-w64-mingw32/Makefile
+++ b/external/recipes/i686-w64-mingw32/Makefile
@@ -16,6 +16,7 @@ all: | $(MAKE)
 	$(MAKE) -C zlib
 	$(MAKE) -C libssh
 	$(MAKE) -C postgresql
+	$(MAKE) -C libmodbus
 
 clean: mostlyclean | $(RM)
 	$(RM) -Rf $(SOURCE_DIR)
