Copy library files to single deployment directory.

--- a/external/recipes/i686-w64-mingw32/gettext/Makefile.include
+++ b/external/recipes/i686-w64-mingw32/gettext/Makefile.include
@@ -1,4 +1,4 @@
-GETTEXT_DEPLOY_DIR = $(DEPLOY_DIR)/gettext
+GETTEXT_DEPLOY_DIR = $(DEPLOY_DIR)
 GETTEXT_INSTALL_DIR = $(INSTALL_DIR)/gettext
 
 $(GETTEXT_INSTALL_DIR):
