--- a/external/recipes/i686-w64-mingw32/libgcrypt/Makefile.include
+++ b/external/recipes/i686-w64-mingw32/libgcrypt/Makefile.include
@@ -1,4 +1,4 @@
-LIBGCRYPT_DEPLOY_DIR = $(DEPLOY_DIR)/libgcrypt
+LIBGCRYPT_DEPLOY_DIR = $(DEPLOY_DIR)
 LIBGCRYPT_INSTALL_DIR = $(INSTALL_DIR)/libgcrypt
 
 $(LIBGCRYPT_INSTALL_DIR):
