--- a/external/recipes/i686-w64-mingw32/libiconv/Makefile.include
+++ b/external/recipes/i686-w64-mingw32/libiconv/Makefile.include
@@ -1,4 +1,4 @@
-LIBICONV_DEPLOY_DIR = $(DEPLOY_DIR)/libiconv
+LIBICONV_DEPLOY_DIR = $(DEPLOY_DIR)
 LIBICONV_INSTALL_DIR = $(INSTALL_DIR)/libiconv
 
 $(LIBICONV_INSTALL_DIR):
