--- a/external/recipes/i686-w64-mingw32/libmodbus/Makefile.include
+++ b/external/recipes/i686-w64-mingw32/libmodbus/Makefile.include
@@ -1,4 +1,4 @@
-LIBMODBUS_DEPLOY_DIR = $(DEPLOY_DIR)/libmodbus
+LIBMODBUS_DEPLOY_DIR = $(DEPLOY_DIR)
 LIBMODBUS_INSTALL_DIR = $(INSTALL_DIR)/libmodbus
 
 $(LIBMODBUS_INSTALL_DIR):
