--- a/external/recipes/i686-w64-mingw32/libssh/Makefile.include
+++ b/external/recipes/i686-w64-mingw32/libssh/Makefile.include
@@ -1,4 +1,4 @@
-LIBSSH_DEPLOY_DIR = $(DEPLOY_DIR)/libssh
+LIBSSH_DEPLOY_DIR = $(DEPLOY_DIR)
 LIBSSH_INSTALL_DIR = $(INSTALL_DIR)/libssh
 
 $(LIBSSH_INSTALL_DIR):
