--- a/external/recipes/i686-w64-mingw32/postgresql/Makefile.include
+++ b/external/recipes/i686-w64-mingw32/postgresql/Makefile.include
@@ -1,4 +1,4 @@
-POSTGRESQL_DEPLOY_DIR = $(DEPLOY_DIR)/postgresql
+POSTGRESQL_DEPLOY_DIR = $(DEPLOY_DIR)
 POSTGRESQL_INSTALL_DIR = $(INSTALL_DIR)/postgresql
 
 $(POSTGRESQL_INSTALL_DIR):
