--- a/external/recipes/i686-w64-mingw32/zlib/Makefile.include
+++ b/external/recipes/i686-w64-mingw32/zlib/Makefile.include
@@ -1,4 +1,4 @@
-ZLIB_DEPLOY_DIR = $(DEPLOY_DIR)/zlib
+ZLIB_DEPLOY_DIR = $(DEPLOY_DIR)
 ZLIB_INSTALL_DIR = $(INSTALL_DIR)/zlib
 
 $(ZLIB_INSTALL_DIR):
