--- a/external/recipes/i686-w64-mingw32/libgpg-error/Makefile.include
+++ b/external/recipes/i686-w64-mingw32/libgpg-error/Makefile.include
@@ -1,4 +1,4 @@
-LIBGPG-ERROR_DEPLOY_DIR = $(DEPLOY_DIR)/libgpg-error
+LIBGPG-ERROR_DEPLOY_DIR = $(DEPLOY_DIR)
 LIBGPG-ERROR_INSTALL_DIR = $(INSTALL_DIR)/libgpg-error
 
 $(LIBGPG-ERROR_INSTALL_DIR):
