--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,9 @@ Doxyfile -crlf
 # Doxygen layouts.
 doc/layout/*.xml -crlf
 
+# Tags file from 'cppreference.com'.
+doc/tags/cppreference.com/cppreference-doxygen-web.tag.xml -crlf
+
 # Localization files.
 modules/*/locale/* -crlf
 tools/*/locale/* -crlf
