--- a/Makefile.i686-w64-mingw32.toolchain
+++ b/Makefile.i686-w64-mingw32.toolchain
@@ -205,7 +205,8 @@ XZDEC = $(MSYS_BIN_DIR)/xzdec.exe
 msys-coreutils-ext msys-diffutils-bin msys-file-bin msys-findutils-bin \
 msys-grep-bin msys-groff-bin msys-gzip-bin msys-less-bin msys-make-bin \
 msys-patch-bin msys-perl-bin msys-sed-bin msys-tar-bin msys-wget-bin \
-msys-xz-bin msysCORE-bin
+msys-xz-bin msysCORE-bin \
+doublequotes_bug_check
 
 $(MINGW_GET):
 	$(info --------------------------------------------------------------------------------)
@@ -261,7 +262,7 @@ msys-gzip-bin $(GZIP): | $(MINGW_GET)
 msys-less-bin $(LESS) $(LESSECHO) $(LESSKEY): | $(MINGW_GET)
 	$(MINGW_GET) install msys-less-bin
 	
-msys-make-bin $(MAKE): | $(MINGW_GET)
+msys-make-bin $(MAKE): | doublequotes_bug_check $(MINGW_GET)
 	$(MINGW_GET) install msys-make-bin
 
 msys-patch-bin $(PATCH): | $(MINGW_GET)
@@ -290,8 +291,8 @@ msysCORE-ext $(CLS) $(CLSB) $(CMD) $(FTP) $(LNKCNV) $(MOUNT) $(MSYSINFO) \
 $(START) $(UMOUNT) $(WHICH): | $(MINGW_GET)
 	$(MINGW_GET) install msysCORE-ext
 
-doublequotes_bug_check: $(ECHO)
-ifeq ($(shell echo \"),\)
+doublequotes_bug_check: | $(ECHO)
+ifeq ($(shell $(ECHO) \"),\)
 	$(info $(shell $(MAKE) --version) does not handle \" properly, which may cause build problems.)
 	$(error Please use MSYS version of Make, which can be installed by 'msys-make-bin' target)
 endif
