Add binary files target.

--- a/external/recipes/i686-w64-mingw32/Makefile.deploy
+++ b/external/recipes/i686-w64-mingw32/Makefile.deploy
@@ -1,4 +1,4 @@
-deploy: $(PRODUCT_INCLUDE_FILES_DEPLOY) $(PRODUCT_LIB_FILES_DEPLOY)
+deploy: $(PRODUCT_INCLUDE_FILES_DEPLOY) $(PRODUCT_LIB_FILES_DEPLOY) $(PRODUCT_BIN_FILES_DEPLOY)
 
 $(PRODUCT_INCLUDE_FILES_DEPLOY): $(PRODUCT_INCLUDE_FILES_INSTALL) | $(MKDIR) $(CP)
 	$(MKDIR) -p $(PRODUCT_DEPLOY_INCLUDE_DIR)
@@ -7,4 +7,8 @@ $(PRODUCT_INCLUDE_FILES_DEPLOY): $(PRODUCT_INCLUDE_FILES_INSTALL) | $(MKDIR) $(C
 $(PRODUCT_LIB_FILES_DEPLOY): $(PRODUCT_LIB_FILES_INSTALL) | $(MKDIR) $(CP)
 	$(MKDIR) -p $(PRODUCT_DEPLOY_LIB_DIR)
 	$(CP) -Rf $? $(PRODUCT_DEPLOY_LIB_DIR)
+
+$(PRODUCT_BIN_FILES_DEPLOY): $(PRODUCT_BIN_FILES_INSTALL) | $(MKDIR) $(CP)
+	$(MKDIR) -p $(PRODUCT_DEPLOY_BIN_DIR)
+	$(CP) -Rf $? $(PRODUCT_DEPLOY_BIN_DIR)
 
