Add binary files target.
Remove directories recursively.

--- a/external/recipes/i686-w64-mingw32/Makefile.buildinstall
+++ b/external/recipes/i686-w64-mingw32/Makefile.buildinstall
@@ -1,3 +1,3 @@
-buildinstall $(PRODUCT_LIB_FILES_INSTALL) $(PRODUCT_INCLUDE_FILES_INSTALL): $(PRODUCT_BUILD_TXT_PATH) | $(CD) $(MAKE)
+buildinstall $(PRODUCT_LIB_FILES_INSTALL) $(PRODUCT_INCLUDE_FILES_INSTALL)  $(PRODUCT_BIN_FILES_INSTALL): $(PRODUCT_BUILD_TXT_PATH) | $(CD) $(MAKE)
 	$(CD) $(PRODUCT_BUILD_DIR) && $(MAKE) -j $(MAKE_BUILD_JOBS) install
 
