--- a/external/recipes/i686-w64-mingw32/Makefile.clean
+++ b/external/recipes/i686-w64-mingw32/Makefile.clean
@@ -10,8 +10,9 @@ mostlyclean: deployclean | $(RM)
 	$(RM) -Rf $(PRODUCT_PORT_DIR)
 
 deployclean: | $(RM) $(RMDIR) $(MKDIR)
-	$(RM) -f $(PRODUCT_LIB_FILES_DEPLOY)
-	$(RM) -f $(PRODUCT_INCLUDE_FILES_DEPLOY)
+	$(RM) -Rf $(PRODUCT_BIN_FILES_DEPLOY)
+	$(RM) -Rf $(PRODUCT_LIB_FILES_DEPLOY)
+	$(RM) -Rf $(PRODUCT_INCLUDE_FILES_DEPLOY)
 	$(MKDIR) -p $(PRODUCT_DEPLOY_LIB_DIR)
 	$(RMDIR) --ignore-fail-on-non-empty $(PRODUCT_DEPLOY_LIB_DIR)
 	$(MKDIR) -p $(PRODUCT_DEPLOY_INCLUDE_DIR)
