--- a/external/recipes/i686-w64-mingw32/libssh/Makefile
+++ b/external/recipes/i686-w64-mingw32/libssh/Makefile
@@ -59,10 +59,10 @@ buildinstall $(PRODUCT_LIB_FILES_INSTALL) $(PRODUCT_INCLUDE_FILES_INSTALL): $(PR
 
 include ../Makefile.build
 
-buildconfigure $(PRODUCT_BUILD_DIR)/Makefile: $(PRODUCT_BUILD_DIR) \
+buildconfigure $(PRODUCT_BUILD_DIR)/Makefile: \
 		$(ZLIB_INSTALL_DIR) \
 		$(LIBGCRYPT_INSTALL_DIR) \
-		$(LIBGPG-ERROR_INSTALL_DIR) | $(RM) $(CD) $(CMAKE) $(TEE)
+		$(LIBGPG-ERROR_INSTALL_DIR) | $(PRODUCT_BUILD_DIR) $(RM) $(CD) $(CMAKE) $(TEE)
 	$(RM) -f $(PRODUCT_BUILD_DIR)/CMakeCache.txt
 	$(CD) $(PRODUCT_BUILD_DIR) && $(CMAKE) $(PRODUCT_PORT_DIR) \
 		-DZLIB_INCLUDE_DIR=$(ZLIB_INSTALL_DIR)/include -DZLIB_LIBRARY=$(ZLIB_INSTALL_DIR)/bin/zlib1.dll \
@@ -72,6 +72,7 @@ buildconfigure $(PRODUCT_BUILD_DIR)/Makefile: $(PRODUCT_BUILD_DIR) \
 		-DCMAKE_INSTALL_PREFIX=$(LIBSSH_INSTALL_DIR) \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_VERBOSE_MAKEFILE=ON \
+		-DTHREADSAFE=ON \
 		-G "MSYS Makefiles" \
 		2>&1 | $(TEE) $(PRODUCT_CONFIGURE_TXT_PATH)
 
