Touch library files.

--- a/external/recipes/i686-w64-mingw32/zlib/Makefile
+++ b/external/recipes/i686-w64-mingw32/zlib/Makefile
@@ -60,6 +60,7 @@ buildinstall $(PRODUCT_LIB_FILES_INSTALL) $(PRODUCT_INCLUDE_FILES_INSTALL): $(PR
 		INCLUDE_PATH=$(PRODUCT_INSTALL_DIR)/include \
 		SHARED_MODE=1
 	$(TOUCH) $(PRODUCT_INCLUDE_FILES_INSTALL)
+	$(TOUCH) $(PRODUCT_LIB_FILES_INSTALL)
 
 build $(PRODUCT_BUILD_TXT_PATH): $(PRODUCT_BUILD_DIR)/win32/Makefile.gcc | $(CD) $(MAKE) $(TEE) $(CMD)
 	$(CD) $(PRODUCT_BUILD_DIR) && $(MAKE) -j $(MAKE_BUILD_JOBS) CFLAGS+='-g0' -f win32/Makefile.gcc \
