Add build recipes to the list.

--- a/external/recipes/i686-w64-mingw32/Makefile
+++ b/external/recipes/i686-w64-mingw32/Makefile
@@ -17,6 +17,9 @@ all: | $(MAKE)
 	$(MAKE) -C libssh
 	$(MAKE) -C postgresql
 	$(MAKE) -C libmodbus
+	$(MAKE) -C libssh2
+	$(MAKE) -C pkg-config-lite
+	$(MAKE) -C libgit2
 
 clean: mostlyclean | $(RM)
 	$(RM) -Rf $(SOURCE_DIR)
